# sav

./: .env.dist  .gitignore  .gitlab-ci.yml  1  2  Cargo.toml  Makefile  Rocket.toml.dist  bower.json  composer.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: bundles.php  routes.yaml  services.yaml
src/: application.php  bootstrap.php  database.rs  error.rs  expense.rs  main.rs
src/Controller/: Expenses.php  Index.php
src/Model/: Expense.php  ExpenseModel.php
src/Model/AutoStructure/: Expense.php
src/config/: parameters.yml.dist
src/sql/: 01-warranty.sql  structure.sql
src/views/: layout.html.twig
src/views/expense/: edit.html.twig  list.html.twig  view.html.twig
static/css/: main.css
templates/: base.html  base.html.tera  error.html  error.html.tera  macros.html  pager.html.tera  pager.html.twig
templates/expense/: edit.html  edit.html.tera  edit.html.twig  list.html  list.html.tera  list.html.twig  view.html  view.html.tera  view.html.twig
web/css/: main.css
