[package]
name = "sav"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"

[dependencies]
mime = "0.3"
rocket = "0.4"
multipart = "0.18"
serde = "1.0"
serde_derive = "1.0"
tera = "1.5"
tera-hot = "0.4"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["databases", "serve"]

[dependencies.elephantry]
version = "3.0"
features = ["date", "rocket", "serde"]

[dependencies.elephantry-extras]
version = "0.4"
features = ["serde", "tera"]
