[package]
name = "sav"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"

[dependencies]
mime = "0.3"
rocket = "0.5"
tera = "1.5"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket_sync_db_pools]
version = "0.1"

[dependencies.rocket_dyn_templates]
version = "0.1"
features = ["tera"]

[dependencies.elephantry]
version = "4.0"
features = ["date", "rocket", "serde"]

[dependencies.elephantry-extras]
version = "0.4"
features = ["serde", "tera"]
