[package]
name = "sav"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"
license = "MIT"

[dependencies]
mime = "0.3"
rocket = "0.5"
tera = "1.5"
thiserror = "2.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket_sync_db_pools]
version = "0.1"

[dependencies.rocket_dyn_templates]
version = "0.2"
features = ["tera"]

[dependencies.elephantry]
version = "5.0"
features = ["date", "rocket", "serde"]

[dependencies.elephantry-extras]
version = "0.8"
features = ["serde", "tera"]
